# 3inkauf

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  k8s.yaml  nginx.conf
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: admin_auth.py  deps.py  feature_flags.py  image_validation.py  palette.py  ratelimit.py  runtime_config.py  security.py  websocket.py
backend/app/models/: __init__.py  account_deletion_token.py  bonus_card.py  bonus_card_share.py  category.py  feature_flag.py  item_image.py  list_item.py  list_share.py  shopping_list.py  sorting_hint.py  user.py
backend/app/routers/: admin.py  auth.py  bonus_cards.py  categories.py  images.py  items.py  lists.py  lists_scan.py  ml.py  recipes.py  sharing.py  voice.py
backend/app/schemas/: auth.py  bonus_card.py  category.py  list_item.py  shopping_list.py
backend/app/services/: email_service.py  ml_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: AutoSortDialog.svelte  Navbar.svelte  RecipeDialog.svelte  ShareDialog.svelte  Spinner.svelte  VoiceButton.svelte
frontend/src/lib/: api.js  auth.js  i18n.js  store.js  voice.js  voice_dispatch.js  ws.js
frontend/src/locales/: de.json  en.json
frontend/src/routes/: Admin.svelte  BonusCards.svelte  ForgotPassword.svelte  ListDetail.svelte  ListOverview.svelte  Login.svelte  Register.svelte  ResetPassword.svelte  Settings.svelte
